@@ -1,10 +1,18 @@
 2005-08-17  Sven Panne  <sven.panne@aedion.de>
+	* linux/src/al_main.c, linux/src/al_mixer.c,
+	linux/src/threads/morphosthreads.c,
+	linux/src/threads/morphosthreads.h,
+	linux/src/threads/posixthreads.c,
+	linux/src/threads/posixthreads.h, linux/src/threads/threadlib.h,
+	linux/src/threads/windowsthreads.c,
+	linux/src/threads/windowsthreads.h: Simplified thread lib.
+
 	* linux/src/al_buffer.c, linux/src/al_ext.c, linux/src/al_mixer.c,
 	linux/src/al_mutexlib.c, linux/src/al_mutexlib.h,
 	linux/src/al_source.c, linux/src/al_spool.c,
-	linux/src/alc/alc_context.c, M src/arch/windows/windows_native.c:
-	Use an "_al" prefix for all globally visible symbols, which are
-	internal to OpenAL.
+	linux/src/alc/alc_context.c,
+	linux/src/arch/windows/windows_native.c: Use an "_al" prefix for
+	all globally visible symbols, which are internal to OpenAL.
 
 	* linux/audioconvert/ac_adpcm.c, linux/audioconvert/ac_adpcm.h,
 	linux/audioconvert/ac_bits.c, linux/audioconvert/ac_channels.c,
